// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoComponent should compile 1`] = `
<app-todo
  todo={[Function Todo]}
  toggle={[Function EventEmitter]}
>
  <p>
    
    
    <label>
      
      
      <input
        type="checkbox"
      />
      
      
      <span
        class="sr-only"
      >
        Toggle complete
      </span>
      
    
    </label>
    
    
    <span>
      Learn Angular
    </span>
    
  
  </p>
  
</app-todo>
`;

exports[`TodoComponent should display todo title 1`] = `
<app-todo
  todo={[Function Todo]}
  toggle={[Function EventEmitter]}
>
  <p>
    
    
    <label>
      
      
      <input
        type="checkbox"
      />
      
      
      <span
        class="sr-only"
      >
        Toggle complete
      </span>
      
    
    </label>
    
    
    <span>
      Learn Zone.js
    </span>
    
  
  </p>
  
</app-todo>
`;

exports[`TodoComponent should render title with strikethrough if todo is completed 1`] = `
<app-todo
  todo={[Function Todo]}
  toggle={[Function EventEmitter]}
>
  <p>
    
    
    <label>
      
      
      <input
        type="checkbox"
      />
      
      
      <span
        class="sr-only"
      >
        Toggle complete
      </span>
      
    
    </label>
    
    
    <span
      style="text-decoration: line-through;"
    >
      Learn RxJS
    </span>
    
  
  </p>
  
</app-todo>
`;
